<resources>
    <string name="app_name">LocationFinderApp</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="save">Save</string>
    <string name="get_address">Get Address</string>
    <string name="address">Address</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="lat">Latitude:</string>
    <string name="lon">Longitude:</string>
    <string name="search">search</string>
</resources>