<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linear_layout"
        app:layout_constraintVertical_weight="5"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/view_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="center_vertical"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lat"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/view_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/latitude"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lon"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/view_lon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/longitude"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </TableRow>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>